[gd_scene load_steps=171 format=2]

[ext_resource path="res://main/img/output-1/0080.png" type="Texture" id=1]
[ext_resource path="res://main/units/bowers/bower.gd" type="Script" id=2]
[ext_resource path="res://main/boxes/hurt_box.gd" type="Script" id=4]
[ext_resource path="res://main/objs/stats/stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://main/img/output-1/0020.png" type="Texture" id=6]
[ext_resource path="res://main/img/output-1/0000.png" type="Texture" id=7]
[ext_resource path="res://main/img/output-1/0040.png" type="Texture" id=8]
[ext_resource path="res://main/img/output-1/0140.png" type="Texture" id=9]
[ext_resource path="res://main/img/output-1/0100.png" type="Texture" id=10]
[ext_resource path="res://main/img/output-1/0060.png" type="Texture" id=11]
[ext_resource path="res://main/img/output-1/0120.png" type="Texture" id=12]
[ext_resource path="res://main/img/output-1/0006.png" type="Texture" id=13]
[ext_resource path="res://main/img/output-1/0001.png" type="Texture" id=14]
[ext_resource path="res://main/img/output-1/0002.png" type="Texture" id=15]
[ext_resource path="res://main/img/output-1/0004.png" type="Texture" id=16]
[ext_resource path="res://main/img/output-1/0003.png" type="Texture" id=17]
[ext_resource path="res://main/img/output-1/0005.png" type="Texture" id=18]
[ext_resource path="res://main/img/output-1/0007.png" type="Texture" id=19]
[ext_resource path="res://main/img/output-1/0008.png" type="Texture" id=20]
[ext_resource path="res://main/img/output-1/0047.png" type="Texture" id=21]
[ext_resource path="res://main/img/output-1/0048.png" type="Texture" id=22]
[ext_resource path="res://main/img/output-1/0050.png" type="Texture" id=23]
[ext_resource path="res://main/img/output-1/0039.png" type="Texture" id=24]
[ext_resource path="res://main/img/output-1/0051.png" type="Texture" id=25]
[ext_resource path="res://main/img/output-1/0024.png" type="Texture" id=26]
[ext_resource path="res://main/img/output-1/0043.png" type="Texture" id=27]
[ext_resource path="res://main/img/output-1/0049.png" type="Texture" id=28]
[ext_resource path="res://main/img/output-1/0052.png" type="Texture" id=29]
[ext_resource path="res://main/img/output-1/0023.png" type="Texture" id=30]
[ext_resource path="res://main/img/output-1/0053.png" type="Texture" id=31]
[ext_resource path="res://main/img/output-1/0054.png" type="Texture" id=32]
[ext_resource path="res://main/img/output-1/0055.png" type="Texture" id=33]
[ext_resource path="res://main/img/output-1/0056.png" type="Texture" id=34]
[ext_resource path="res://main/img/output-1/0032.png" type="Texture" id=35]
[ext_resource path="res://main/img/output-1/0029.png" type="Texture" id=36]
[ext_resource path="res://main/img/output-1/0033.png" type="Texture" id=37]
[ext_resource path="res://main/img/output-1/0036.png" type="Texture" id=38]
[ext_resource path="res://main/img/output-1/0030.png" type="Texture" id=39]
[ext_resource path="res://main/img/output-1/0022.png" type="Texture" id=40]
[ext_resource path="res://main/img/output-1/0026.png" type="Texture" id=41]
[ext_resource path="res://main/img/output-1/0028.png" type="Texture" id=42]
[ext_resource path="res://main/img/output-1/0034.png" type="Texture" id=43]
[ext_resource path="res://main/img/output-1/0021.png" type="Texture" id=44]
[ext_resource path="res://main/img/output-1/0031.png" type="Texture" id=45]
[ext_resource path="res://main/img/output-1/0035.png" type="Texture" id=46]
[ext_resource path="res://main/img/output-1/0025.png" type="Texture" id=47]
[ext_resource path="res://main/img/output-1/0037.png" type="Texture" id=48]
[ext_resource path="res://main/img/output-1/0038.png" type="Texture" id=49]
[ext_resource path="res://main/img/output-1/0041.png" type="Texture" id=50]
[ext_resource path="res://main/img/output-1/0042.png" type="Texture" id=51]
[ext_resource path="res://main/img/output-1/0044.png" type="Texture" id=52]
[ext_resource path="res://main/img/output-1/0045.png" type="Texture" id=53]
[ext_resource path="res://main/img/output-1/0046.png" type="Texture" id=54]
[ext_resource path="res://main/img/output-1/0027.png" type="Texture" id=55]
[ext_resource path="res://main/img/output-1/0058.png" type="Texture" id=56]
[ext_resource path="res://main/img/output-1/0062.png" type="Texture" id=57]
[ext_resource path="res://main/img/output-1/0063.png" type="Texture" id=58]
[ext_resource path="res://main/img/output-1/0011.png" type="Texture" id=59]
[ext_resource path="res://main/img/output-1/0009.png" type="Texture" id=60]
[ext_resource path="res://main/img/output-1/0012.png" type="Texture" id=61]
[ext_resource path="res://main/img/output-1/0016.png" type="Texture" id=62]
[ext_resource path="res://main/img/output-1/0014.png" type="Texture" id=63]
[ext_resource path="res://main/img/output-1/0017.png" type="Texture" id=64]
[ext_resource path="res://main/img/output-1/0013.png" type="Texture" id=65]
[ext_resource path="res://main/img/output-1/0010.png" type="Texture" id=66]
[ext_resource path="res://main/img/output-1/0015.png" type="Texture" id=67]
[ext_resource path="res://main/img/output-1/0018.png" type="Texture" id=68]
[ext_resource path="res://main/img/output-1/0019.png" type="Texture" id=69]
[ext_resource path="res://main/img/output-1/0057.png" type="Texture" id=70]
[ext_resource path="res://main/img/output-1/0059.png" type="Texture" id=71]
[ext_resource path="res://main/img/output-1/0061.png" type="Texture" id=72]
[ext_resource path="res://main/img/output-1/0072.png" type="Texture" id=73]
[ext_resource path="res://main/img/output-1/0091.png" type="Texture" id=74]
[ext_resource path="res://main/img/output-1/0095.png" type="Texture" id=75]
[ext_resource path="res://main/img/output-1/0099.png" type="Texture" id=76]
[ext_resource path="res://main/img/output-1/0102.png" type="Texture" id=77]
[ext_resource path="res://main/img/output-1/0105.png" type="Texture" id=78]
[ext_resource path="res://main/img/output-1/0090.png" type="Texture" id=79]
[ext_resource path="res://main/img/output-1/0106.png" type="Texture" id=80]
[ext_resource path="res://main/img/output-1/0083.png" type="Texture" id=81]
[ext_resource path="res://main/img/output-1/0098.png" type="Texture" id=82]
[ext_resource path="res://main/img/output-1/0110.png" type="Texture" id=83]
[ext_resource path="res://main/img/output-1/0113.png" type="Texture" id=84]
[ext_resource path="res://main/img/output-1/0097.png" type="Texture" id=85]
[ext_resource path="res://main/img/output-1/0116.png" type="Texture" id=86]
[ext_resource path="res://main/img/output-1/0074.png" type="Texture" id=87]
[ext_resource path="res://main/img/output-1/0073.png" type="Texture" id=88]
[ext_resource path="res://main/img/output-1/0117.png" type="Texture" id=89]
[ext_resource path="res://main/img/output-1/0092.png" type="Texture" id=90]
[ext_resource path="res://main/img/output-1/0103.png" type="Texture" id=91]
[ext_resource path="res://main/img/output-1/0111.png" type="Texture" id=92]
[ext_resource path="res://main/img/output-1/0077.png" type="Texture" id=93]
[ext_resource path="res://main/img/output-1/0082.png" type="Texture" id=94]
[ext_resource path="res://main/img/output-1/0088.png" type="Texture" id=95]
[ext_resource path="res://main/img/output-1/0089.png" type="Texture" id=96]
[ext_resource path="res://main/img/output-1/0093.png" type="Texture" id=97]
[ext_resource path="res://main/img/output-1/0118.png" type="Texture" id=98]
[ext_resource path="res://main/img/output-1/0119.png" type="Texture" id=99]
[ext_resource path="res://main/img/output-1/0122.png" type="Texture" id=100]
[ext_resource path="res://main/img/output-1/0123.png" type="Texture" id=101]
[ext_resource path="res://main/img/output-1/0079.png" type="Texture" id=102]
[ext_resource path="res://main/img/output-1/0125.png" type="Texture" id=103]
[ext_resource path="res://main/img/output-1/0096.png" type="Texture" id=104]
[ext_resource path="res://main/img/output-1/0114.png" type="Texture" id=105]
[ext_resource path="res://main/img/output-1/0112.png" type="Texture" id=106]
[ext_resource path="res://main/img/output-1/0075.png" type="Texture" id=107]
[ext_resource path="res://main/img/output-1/0115.png" type="Texture" id=108]
[ext_resource path="res://main/img/output-1/0078.png" type="Texture" id=109]
[ext_resource path="res://main/img/output-1/0127.png" type="Texture" id=110]
[ext_resource path="res://main/img/output-1/0130.png" type="Texture" id=111]
[ext_resource path="res://main/img/output-1/0131.png" type="Texture" id=112]
[ext_resource path="res://main/img/output-1/0133.png" type="Texture" id=113]
[ext_resource path="res://main/img/output-1/0134.png" type="Texture" id=114]
[ext_resource path="res://main/img/output-1/0135.png" type="Texture" id=115]
[ext_resource path="res://main/img/output-1/0128.png" type="Texture" id=116]
[ext_resource path="res://main/img/output-1/0136.png" type="Texture" id=117]
[ext_resource path="res://main/img/output-1/0076.png" type="Texture" id=118]
[ext_resource path="res://main/img/output-1/0126.png" type="Texture" id=119]
[ext_resource path="res://main/img/output-1/0081.png" type="Texture" id=120]
[ext_resource path="res://main/img/output-1/0108.png" type="Texture" id=121]
[ext_resource path="res://main/img/output-1/0132.png" type="Texture" id=122]
[ext_resource path="res://main/img/output-1/0070.png" type="Texture" id=123]
[ext_resource path="res://main/img/output-1/0071.png" type="Texture" id=124]
[ext_resource path="res://main/img/output-1/0085.png" type="Texture" id=125]
[ext_resource path="res://main/img/output-1/0086.png" type="Texture" id=126]
[ext_resource path="res://main/img/output-1/0101.png" type="Texture" id=127]
[ext_resource path="res://main/img/output-1/0084.png" type="Texture" id=128]
[ext_resource path="res://main/img/output-1/0104.png" type="Texture" id=129]
[ext_resource path="res://main/img/output-1/0107.png" type="Texture" id=130]
[ext_resource path="res://main/img/output-1/0109.png" type="Texture" id=131]
[ext_resource path="res://main/img/output-1/0124.png" type="Texture" id=132]
[ext_resource path="res://main/img/output-1/0129.png" type="Texture" id=133]
[ext_resource path="res://main/img/output-1/0094.png" type="Texture" id=134]
[ext_resource path="res://main/img/output-1/0121.png" type="Texture" id=135]
[ext_resource path="res://main/img/output-1/0087.png" type="Texture" id=136]
[ext_resource path="res://main/img/output-1/0067.png" type="Texture" id=137]
[ext_resource path="res://main/img/output-1/0069.png" type="Texture" id=138]
[ext_resource path="res://main/img/output-1/0068.png" type="Texture" id=139]
[ext_resource path="res://main/img/output-1/0066.png" type="Texture" id=140]
[ext_resource path="res://main/img/output-1/0064.png" type="Texture" id=141]
[ext_resource path="res://main/img/output-1/0065.png" type="Texture" id=142]
[ext_resource path="res://main/img/output-1/0144.png" type="Texture" id=143]
[ext_resource path="res://main/img/output-1/0159.png" type="Texture" id=144]
[ext_resource path="res://main/img/output-1/0142.png" type="Texture" id=145]
[ext_resource path="res://main/img/output-1/0158.png" type="Texture" id=146]
[ext_resource path="res://main/img/output-1/0138.png" type="Texture" id=147]
[ext_resource path="res://main/img/output-1/0141.png" type="Texture" id=148]
[ext_resource path="res://main/img/output-1/0145.png" type="Texture" id=149]
[ext_resource path="res://main/img/output-1/0147.png" type="Texture" id=150]
[ext_resource path="res://main/img/output-1/0150.png" type="Texture" id=151]
[ext_resource path="res://main/img/output-1/0157.png" type="Texture" id=152]
[ext_resource path="res://main/img/output-1/0149.png" type="Texture" id=153]
[ext_resource path="res://main/img/output-1/0151.png" type="Texture" id=154]
[ext_resource path="res://main/img/output-1/0139.png" type="Texture" id=155]
[ext_resource path="res://main/img/output-1/0143.png" type="Texture" id=156]
[ext_resource path="res://main/img/output-1/0137.png" type="Texture" id=157]
[ext_resource path="res://main/img/output-1/0156.png" type="Texture" id=158]
[ext_resource path="res://main/img/output-1/0146.png" type="Texture" id=159]
[ext_resource path="res://main/img/output-1/0153.png" type="Texture" id=160]
[ext_resource path="res://main/img/output-1/0155.png" type="Texture" id=161]
[ext_resource path="res://main/img/output-1/0154.png" type="Texture" id=162]
[ext_resource path="res://main/img/output-1/0152.png" type="Texture" id=163]
[ext_resource path="res://main/img/output-1/0148.png" type="Texture" id=164]
[ext_resource path="res://main/objs/wath_zone/watchout.gd" type="Script" id=166]

[sub_resource type="PhysicsMaterial" id=55]
friction = 0.0
bounce = 0.25
absorbent = true

[sub_resource type="CircleShape2D" id=56]
resource_local_to_scene = true
radius = 5.0

[sub_resource type="SpriteFrames" id=61]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 60 ), ExtResource( 66 ), ExtResource( 59 ), ExtResource( 61 ), ExtResource( 65 ), ExtResource( 63 ), ExtResource( 67 ), ExtResource( 62 ), ExtResource( 64 ), ExtResource( 68 ), ExtResource( 69 ) ],
"loop": true,
"name": "att-1",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 40 ), ExtResource( 30 ), ExtResource( 26 ), ExtResource( 47 ), ExtResource( 41 ), ExtResource( 55 ), ExtResource( 42 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 45 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 46 ), ExtResource( 38 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 24 ) ],
"loop": true,
"name": "att-2",
"speed": 5.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 51 ), ExtResource( 27 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 70 ), ExtResource( 56 ), ExtResource( 71 ) ],
"loop": true,
"name": "att-3",
"speed": 5.0
}, {
"frames": [ ExtResource( 72 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 141 ), ExtResource( 142 ), ExtResource( 140 ), ExtResource( 137 ), ExtResource( 139 ), ExtResource( 138 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 73 ), ExtResource( 88 ), ExtResource( 87 ), ExtResource( 107 ), ExtResource( 118 ), ExtResource( 93 ), ExtResource( 109 ), ExtResource( 102 ) ],
"loop": true,
"name": "att-4",
"speed": 5.0
}, {
"frames": [ ExtResource( 120 ), ExtResource( 94 ), ExtResource( 81 ), ExtResource( 128 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 136 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 79 ), ExtResource( 74 ), ExtResource( 90 ), ExtResource( 97 ), ExtResource( 134 ), ExtResource( 75 ), ExtResource( 104 ), ExtResource( 85 ), ExtResource( 82 ), ExtResource( 76 ) ],
"loop": true,
"name": "att-5",
"speed": 5.0
}, {
"frames": [ ExtResource( 127 ), ExtResource( 77 ), ExtResource( 91 ), ExtResource( 129 ), ExtResource( 78 ), ExtResource( 80 ), ExtResource( 130 ), ExtResource( 121 ), ExtResource( 131 ), ExtResource( 83 ), ExtResource( 92 ), ExtResource( 106 ), ExtResource( 84 ), ExtResource( 105 ), ExtResource( 108 ), ExtResource( 86 ), ExtResource( 89 ), ExtResource( 98 ), ExtResource( 99 ) ],
"loop": true,
"name": "att-6",
"speed": 5.0
}, {
"frames": [ ExtResource( 135 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 132 ), ExtResource( 103 ), ExtResource( 119 ), ExtResource( 110 ), ExtResource( 116 ), ExtResource( 133 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 122 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 117 ), ExtResource( 157 ), ExtResource( 147 ), ExtResource( 155 ) ],
"loop": true,
"name": "att-7",
"speed": 5.0
}, {
"frames": [ ExtResource( 148 ), ExtResource( 145 ), ExtResource( 156 ), ExtResource( 143 ), ExtResource( 149 ), ExtResource( 159 ), ExtResource( 150 ), ExtResource( 164 ), ExtResource( 153 ), ExtResource( 151 ), ExtResource( 154 ), ExtResource( 163 ), ExtResource( 160 ), ExtResource( 162 ), ExtResource( 161 ), ExtResource( 158 ), ExtResource( 152 ), ExtResource( 146 ), ExtResource( 144 ) ],
"loop": true,
"name": "att-8",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "wait-1",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "wait-2",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "wait-3",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "wait-4",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "wait-5",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "wait-6",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "wait-7",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "wait-8",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=65]
radius = 5.0
height = 42.96

[sub_resource type="CircleShape2D" id=58]
radius = 193.0

[sub_resource type="Animation" id=59]
resource_name = "att"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_att"
}, {
"args": [  ],
"method": "add_att_zone"
}, {
"args": [  ],
"method": "end_att"
} ]
}

[node name="bow" type="RigidBody2D" groups=["unit"]]
mode = 2
physics_material_override = SubResource( 55 )
custom_integrator = true
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="stats" parent="." instance=ExtResource( 5 )]
m_he = 20.0

[node name="nav_ag" type="NavigationAgent2D" parent="."]
path_max_distance = 60.0
neighbor_dist = 20.0
time_horizon = 1.0
max_speed = 100.0

[node name="c" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 56 )

[node name="spr" type="AnimatedSprite" parent="."]
position = Vector2( 2, -24.55 )
scale = Vector2( 0.06, 0.06 )
frames = SubResource( 61 )
animation = "wait-1"
speed_scale = 7.0

[node name="hurt_box" type="Area2D" parent="."]
position = Vector2( 0, 1 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 4 )
tspeed = 0.3

[node name="col" type="CollisionShape2D" parent="hurt_box"]
position = Vector2( 0, -24 )
shape = SubResource( 65 )

[node name="Timer" type="Timer" parent="hurt_box"]

[node name="front" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16
script = ExtResource( 166 )

[node name="с" type="CollisionPolygon2D" parent="front"]
visible = false
scale = Vector2( 10, 10 )
polygon = PoolVector2Array( -16, 0, -14, 8, -9, 14, 0, 16, 9, 14, 14, 8, 16, 0 )

[node name="watchout" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 17

[node name="c2" type="CollisionShape2D" parent="watchout"]
visible = false
shape = SubResource( 58 )

[node name="AP" type="AnimationPlayer" parent="."]
anims/att = SubResource( 59 )

[node name="r" type="RayCast2D" parent="."]
enabled = true
collision_mask = 16

[node name="no" type="NavigationObstacle2D" parent="."]

[connection signal="velocity_computed" from="nav_ag" to="." method="_on_nav_ag_velocity_computed"]
[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="invi_ended" from="hurt_box" to="hurt_box" method="_on_hurt_box_invi_ended"]
[connection signal="invi_started" from="hurt_box" to="hurt_box" method="_on_hurt_box_invi_started"]
[connection signal="timeout" from="hurt_box/Timer" to="hurt_box" method="_on_Timer_timeout"]
[connection signal="body_entered" from="front" to="front" method="_on_b_entered"]
[connection signal="body_exited" from="front" to="front" method="_on_b_exited"]
[connection signal="body_entered" from="watchout" to="." method="_on_watchout_body_entered"]
[connection signal="body_exited" from="watchout" to="." method="_on_watchout_body_exited"]
